<resources>
    <string name="app_name">Recipe Finder</string>
    <string name="register_prod">Register Product</string>
    <string name="display_prod">Display Products</string>
    <string name="available">Availability</string>
    <string name="edit_prod">Edit Products</string>
    <string name="recipe">Recipe</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="weight">Weight(Kg)</string>
    <string name="price">Price(LKR)</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
</resources>
