<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/register_prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_shape"
        android:onClick="registerProduct"
        android:text="@string/register_prod"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/display_prod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/display_prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_shape"
        android:text="@string/display_prod"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/available"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_prod" />

    <Button
        android:id="@+id/available"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_shape"
        android:text="@string/available"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_prod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_prod" />

    <Button
        android:id="@+id/edit_prod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_shape"
        android:text="@string/edit_prod"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/available" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_shape"
        android:text="@string/search"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/recipe"
        app:layout_constraintTop_toBottomOf="@+id/edit_prod"
        tools:layout_editor_absoluteX="167dp" />

    <Button
        android:id="@+id/recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_shape"
        android:text="@string/recipe"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

</android.support.constraint.ConstraintLayout>